--- a/.minecraft/modpack-project.json
+++ b/.minecraft/modpack-project.json
@@ -1,5 +1,5 @@
 {
-  "name": "Snownee's Collection",
+  "name": "Zengineering",
   "mcversion": "1.15.2",
   "author": "Snownee",
   "modloader": "forge",
