Do not upload builds

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
 /.minecraft/saves/
+/.minecraft/build/
 /.minecraft/.mixin.out/
 /.minecraft/.modpack/
-/.minecraft/journeymap/data/
 /.minecraft/crash-reports/
 /.minecraft/logs/
+/.minecraft/mods/
+/.minecraft/shaderpacks/
+/.minecraft/journeymap/data/
 /.minecraft/journeymap/icon/
 /.minecraft/journeymap/journeymap.log
-/.minecraft/mods/
-/.minecraft/realms_persistence.json
+
 /.minecraft/servers.dat
 /.minecraft/reauth.toml
 /.minecraft/usercache.json
 /.minecraft/usernamecache.json
-/.minecraft/shaderpacks/
 /.minecraft/patchouli_data.json
+/.minecraft/realms_persistence.json
