--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /.minecraft/realms_persistence.json
 /.minecraft/config/jei/bookmarks.ini
 /natives/
+/.minecraft/config/jecalculation/record.json
