--- a/.minecraft/journeymap/server/5.7/journeymap.server.default.config
+++ b/.minecraft/journeymap/server/5.7/journeymap.server.default.config
@@ -18,5 +18,5 @@
   "villagerRadarEnabled": "true",
   "animalRadarEnabled": "true",
   "mobRadarEnabled": "true",
-  "configVersion": "5.7.0dev"
+  "configVersion": "5.7.0b2"
 }
