--- a/.minecraft/config/cucumber-client.toml
+++ b/.minecraft/config/cucumber-client.toml
@@ -2,5 +2,4 @@
 #General configuration options.
 [General]
 	#Enable tag list tooltips for blocks/items?
-	tagTooltips = true
-
+	tagTooltips = false
