--- a/.minecraft/journeymap/config/5.7/journeymap.core.config
+++ b/.minecraft/journeymap/config/5.7/journeymap.core.config
@@ -59,5 +59,5 @@
   "colorPlayer": "#ffffff",
   "colorSelf": "#0000ff",
   "verboseColorPalette": "false",
-  "configVersion": "5.7.0dev"
+  "configVersion": "5.7.0b2"
 }
