--- a/.minecraft/journeymap/config/5.7/journeymap.fullmap.config
+++ b/.minecraft/journeymap/config/5.7/journeymap.fullmap.config
@@ -23,5 +23,5 @@
   "showEntityNames": "true",
   "preferredMapType": "day",
   "zoomLevel": "0",
-  "configVersion": "5.7.0dev"
+  "configVersion": "5.7.0b2"
 }
