--- a/.minecraft/journeymap/config/5.7/journeymap.minimap.config
+++ b/.minecraft/journeymap/config/5.7/journeymap.minimap.config
@@ -41,5 +41,5 @@
   "showEntityNames": "true",
   "preferredMapType": "day",
   "zoomLevel": "0",
-  "configVersion": "5.7.0dev"
+  "configVersion": "5.7.0b2"
 }
