--- a/.minecraft/journeymap/config/5.7/journeymap.webmap.config
+++ b/.minecraft/journeymap/config/5.7/journeymap.webmap.config
@@ -11,5 +11,5 @@
   "showEntityNames": "true",
   "preferredMapType": "day",
   "zoomLevel": "0",
-  "configVersion": "5.7.0dev"
+  "configVersion": "5.7.0b2"
 }
