--- a/.minecraft/journeymap/server/5.7/journeymap.server.dim1.config
+++ b/.minecraft/journeymap/server/5.7/journeymap.server.dim1.config
@@ -19,5 +19,5 @@
   "villagerRadarEnabled": "true",
   "animalRadarEnabled": "true",
   "mobRadarEnabled": "true",
-  "configVersion": "5.7.0dev"
+  "configVersion": "5.7.0b2"
 }
