Ignore more files

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /natives/
 /.minecraft/config/jecalculation/record.json
 /instance.cfg
+/.minecraft/journeymap/config/5.7/journeymap.minimap.config
