--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /.minecraft/config/jecalculation/record.json
 /instance.cfg
 /.minecraft/journeymap/config/5.7/journeymap.minimap.config
+/.minecraft/screenshots/
