--- a/.minecraft/config/quark-common.toml
+++ b/.minecraft/config/quark-common.toml
@@ -35,7 +35,7 @@
 
 [automation]
 	Chute = true
-	"Iron Rod" = true
+	"Iron Rod" = false
 	"Weather Sensor" = true
 	"Ender Watcher" = true
 	"Endermites Form Shulkers" = true
@@ -961,11 +961,11 @@
 				"Is Blacklist" = true
 
 			[world.mega_caves.spawn_settings.dimensions]
-				Dimensions = ["minecraft:overworld"]
+				Dimensions = []
 				"Is Blacklist" = false
 
 		[world.mega_caves.dimensions]
-			Dimensions = ["minecraft:overworld"]
+			Dimensions = []
 			"Is Blacklist" = false
 
 	[world.elder_prismarine_underground_biome]
@@ -1146,8 +1146,8 @@
 	"Totem Of Holding" = false
 	Backpack = true
 	"Matrix Enchanting" = true
-	Magnets = true
-	Pipes = true
+	Magnets = false
+	Pipes = false
 
 	[oddities.totem_of_holding]
 		#Set this to false to remove the behaviour where totems destroy themselves if the player dies again.
@@ -1239,4 +1239,3 @@
 		#That's a lot to take in, so here's an example. This would be for the default config of the Slime underground biome. (Spaces are allowed.)
 		#minecraft:overworld; false; SWAMP; false; 120; 10..40; 26,14; 14,6; minecraft:water@915, minecraft:slime_block@85; minecraft:green_terracotta@2, minecraft:lime_terracotta@3, minecraft:light_blue_terracotta@1; CEILING; false
 		"Biome Definitions" = []
-
