--- a/.minecraft/config/kiwi.toml
+++ b/.minecraft/config/kiwi.toml
@@ -13,10 +13,10 @@
 	debugTooltip = true
 	#Max line width shown in description of tooltips
 	#Range: > 50
-	tooltipWrapWidth = 100
+	tooltipWrapWidth = 500
+	#Show customized tooltips from any item. Mainly for pack devs
+	globalTooltip = true
 	#Allowed values: vanilla, kiwi
 	debugTooltipNBTFormatter = "vanilla"
 	contributorEffect = ""
-	#Tooltips require pressing shift to be shown
-	tooltipRequiresShift = false
 
