--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /instance.cfg
 /.minecraft/journeymap/config/5.7/journeymap.minimap.config
 /.minecraft/screenshots/
+/.minecraft/WailaErrorOutput.txt
