--- a/.minecraft/config/oreveins-common.toml
+++ b/.minecraft/config/oreveins-common.toml
@@ -11,5 +11,5 @@
 	#Range: 0 ~ 20
 	extraChunkRange = 0
 	#Vanilla ore gen to disable. Must be specified as a list of block states, i.e. minecraft:gold_ore, minecraft:iron_ore, etc.
-	disabledOres = ["minecraft:coal_ore", "minecraft:iron_ore", "minecraft:gold_ore", "minecraft:diamond_ore", "minecraft:lapis_ore", "minecraft:redstone_ore", "minecraft:diamond_ore"]
+	disabledOres = ["minecraft:coal_ore", "minecraft:gold_ore", "minecraft:diamond_ore", "minecraft:lapis_ore", "minecraft:diamond_ore"]
 
