--- a/.minecraft/config/quark-common.toml
+++ b/.minecraft/config/quark-common.toml
@@ -209,7 +209,7 @@
 	"Pathfinder Maps" = true
 	"Bottled Cloud" = true
 	"Color Runes" = true
-	"Ancient Tomes" = true
+	"Ancient Tomes" = false
 	"Slime In A Bucket" = true
 	Camera = true
 	Trowel = true
@@ -1251,3 +1251,4 @@
 		#That's a lot to take in, so here's an example. This would be for the default config of the Slime underground biome. (Spaces are allowed.)
 		#minecraft:overworld; false; SWAMP; false; 120; 10..40; 26,14; 14,6; minecraft:water@915, minecraft:slime_block@85; minecraft:green_terracotta@2, minecraft:lime_terracotta@3, minecraft:light_blue_terracotta@1; CEILING; false
 		"Biome Definitions" = []
+
