--- a/.minecraft/config/Mekanism/machine-usage.toml
+++ b/.minecraft/config/Mekanism/machine-usage.toml
@@ -8,13 +8,13 @@
 	#Energy per operation tick (Joules).
 	rotaryCondensentrator = "50"
 	#Energy per operation tick (Joules).
-	osmiumCompressor = "100"
+	osmiumCompressor = "1000"
 	#Energy per operation tick (Joules).
 	precisionSawmill = "50"
 	#Energy per operation tick (Joules).
 	digitalMiner = "100"
 	#Energy per operation tick (Joules).
-	combiner = "50"
+	combiner = "5000000"
 	#Energy per operation tick (Joules).
 	metallurgicInfuser = "50"
 	#Energy per operation tick (Joules).
