--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /.minecraft/journeymap/config/5.7/journeymap.minimap.config
 /.minecraft/screenshots/
 /.minecraft/WailaErrorOutput.txt
+/.minecraft/node_modules/
