--- a/.minecraft/config/passablefoliage-common.toml
+++ b/.minecraft/config/passablefoliage-common.toml
@@ -11,4 +11,14 @@ speedReductionHorizontal = 0.8999999761581421
 #The reduced vertical speed when passing through leaves. (% of normal)
 #Range: 0.0 ~ 1.0
 speedReductionVertical = 0.8999999761581421
+#Should entities recognize leaves as air
+modifyPathFinding = true
+#Leaves only passable for players
+playerOnly = false
+
+[sounds]
+	#Range: 0.0 ~ 10.0
+	volume = 1.0
+	#Only players can make noises
+	playerOnly = false
 
