--- a/.minecraft/modpack-project.json
+++ b/.minecraft/modpack-project.json
@@ -1,10 +1,10 @@
 {
   "name": "Create 101",
   "mcversion": "1.15.2",
-  "author": "Snownee",
+  "author": "Snownee_",
   "modloader": "forge",
   "version": {
-    "major": 0,
+    "major": 1,
     "minor": 0,
     "patch": 0
   },
