fix: creative recipe gives empty energy cube fix: snow golem does not drop snowflake

--- a/.minecraft/openloader/data/Zengineering/data/minecraft/loot_tables/entities/snow_golem.json
+++ b/.minecraft/openloader/data/Zengineering/data/minecraft/loot_tables/entities/snow_golem.json
@@ -16,7 +16,7 @@
               }
             }
           ],
-          "name": "minecraft:poisonous_potato"
+          "name": "mekanism:nugget_tin"
         }
       ]
     }
