--- a/.minecraft/config/quark-common.toml
+++ b/.minecraft/config/quark-common.toml
@@ -98,8 +98,8 @@
 	"Vertical Slabs" = true
 	Shingles = true
 	"Nether Brick Fence Gate" = true
-	"Item Frames" = false
-	"Stained Planks" = false
+	"Item Frames" = true
+	"Stained Planks" = true
 	"Leaf Carpet" = true
 	"Lit Lamp" = true
 	"Vertical Planks" = true
@@ -1251,4 +1251,3 @@
 		#That's a lot to take in, so here's an example. This would be for the default config of the Slime underground biome. (Spaces are allowed.)
 		#minecraft:overworld; false; SWAMP; false; 120; 10..40; 26,14; 14,6; minecraft:water@915, minecraft:slime_block@85; minecraft:green_terracotta@2, minecraft:lime_terracotta@3, minecraft:light_blue_terracotta@1; CEILING; false
 		"Biome Definitions" = []
-
