--- a/.minecraft/config/apotheosis/enchantments.cfg
+++ b/.minecraft/config/apotheosis/enchantments.cfg
@@ -31,8 +31,16 @@
 
 
 "apotheosis:capturing" {
-    # The max level of this enchantment - normally 5. [range: 1 ~ 127, default: 7]
     I:"Max Level"=7
+    S:"Max Power Function"=
+    I:"Min Level"=1
+    S:"Min Power Function"=
+}
+
+
+"apotheosis:crescendo" {
+    # The max level of this enchantment - normally 3. [range: 1 ~ 127, default: 5]
+    I:"Max Level"=5
 
     # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
@@ -138,6 +146,21 @@
 "apotheosis:natures_blessing" {
     # The max level of this enchantment - normally 3. [range: 1 ~ 127, default: 7]
     I:"Max Level"=7
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"apotheosis:obliteration" {
+    # The max level of this enchantment - normally 5. [range: 1 ~ 127, default: 9]
+    I:"Max Level"=9
 
     # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
@@ -273,6 +296,21 @@
 "apotheosis:true_infinity" {
     # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
     I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"farmersdelight:backstabbing" {
+    # The max level of this enchantment - normally 3. [range: 1 ~ 127, default: 7]
+    I:"Max Level"=7
 
     # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
