--- a/instance.cfg
+++ b/instance.cfg
@@ -2,10 +2,7 @@ AutoCloseConsole=false
 ForgeVersion=
 InstanceType=OneSix
 IntendedVersion=
-JavaArchitecture=64
-JavaPath=C:/Program Files/Java/jre1.8.0_261/bin/javaw.exe
-JavaTimestamp=1596295648395
-JavaVersion=1.8.0_261
+JavaPath=javaw
 JvmArgs=
 LWJGLVersion=
 LaunchMaximized=false
@@ -31,7 +28,7 @@ ShowConsole=false
 ShowConsoleOnError=true
 WrapperCommand=
 iconKey=default
-lastLaunchTime=1601407093023
-name=Zengineering
+lastLaunchTime=
+name=Create 101
 notes=
-totalTimePlayed=36
+totalTimePlayed=
