--- a/.minecraft/config/quark-common.toml
+++ b/.minecraft/config/quark-common.toml
@@ -283,7 +283,7 @@
 	"Dirt To Path" = true
 	"Simple Harvest" = true
 	"Hoe Harvesting" = true
-	"Reacharound Placing" = true
+	"Reacharound Placing" = false
 	"Villagers Follow Emeralds" = true
 	"Compasses Work Everywhere" = true
 	"Note Block Mob Sounds" = true
@@ -1251,4 +1251,3 @@
 		#That's a lot to take in, so here's an example. This would be for the default config of the Slime underground biome. (Spaces are allowed.)
 		#minecraft:overworld; false; SWAMP; false; 120; 10..40; 26,14; 14,6; minecraft:water@915, minecraft:slime_block@85; minecraft:green_terracotta@2, minecraft:lime_terracotta@3, minecraft:light_blue_terracotta@1; CEILING; false
 		"Biome Definitions" = []
-
