--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@
 /.minecraft/config/jecalculation/record.json
 /.minecraft/config/journeymap_ModInfo.cfg
 /instance.cfg
+/.minecraft/options.txt
+/instance.cfg
