--- a/.minecraft/openloader/data/Zengineering/data/create/recipes/crafting/curiosities/handheld_blockzapper.json
+++ b/.minecraft/openloader/data/Zengineering/data/create/recipes/crafting/curiosities/handheld_blockzapper.json
@@ -10,7 +10,7 @@
       "item": "create:refined_radiance"
     },
     "A": {
-      "item": "create:andesite_alloy"
+      "item": "create:iron_sheet"
     },
     "O": {
       "tag": "forge:obsidian"
