--- a/instance.cfg
+++ b/instance.cfg
@@ -1,17 +1,24 @@
+AutoCloseConsole=false
 ForgeVersion=
 InstanceType=OneSix
 IntendedVersion=
 JavaArchitecture=64
+JavaPath=C:/Program Files/Java/jre1.8.0_261/bin/javaw.exe
 JavaTimestamp=1596295648395
 JavaVersion=1.8.0_261
+JvmArgs=
 LWJGLVersion=
+LaunchMaximized=false
 LiteloaderVersion=
 LogPrePostOutput=true
 MCLaunchMethod=LauncherPart
 MaxMemAlloc=4608
 MinMemAlloc=4096
+MinecraftWinHeight=480
+MinecraftWinWidth=854
 OverrideCommands=false
 OverrideConsole=false
+OverrideJava=false
 OverrideJavaArgs=false
 OverrideJavaLocation=false
 OverrideMCLaunchMethod=false
@@ -19,8 +26,15 @@ OverrideMemory=true
 OverrideNativeWorkarounds=false
 OverrideWindow=false
 PermGen=128
+PostExitCommand=
+PreLaunchCommand=
+ShowConsole=false
+ShowConsoleOnError=true
+UseNativeGLFW=false
+UseNativeOpenAL=false
+WrapperCommand=
 iconKey=default
-lastLaunchTime=1603377137327
-name=Zengineering
+lastLaunchTime=1613276040791
+name=Create Main
 notes=
-totalTimePlayed=36787
+totalTimePlayed=147204
