--- a/.minecraft/config/fabrication/features.ini
+++ b/.minecraft/config/fabrication/features.ini
@@ -143,7 +143,7 @@
 	; such a space, so cactus randomizers and cactus farms still work.
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/stable_cacti.mp4
-	stable_cacti=unset
+	stable_cacti=false
 
 	; Makes the last attacker yaw field sync properly when the player is 
 	; damaged, instead of always being zero. Causes the camera shake 
