--- a/.minecraft/defaultconfigs/solpotato-server.toml
+++ b/.minecraft/defaultconfigs/solpotato-server.toml
@@ -26,7 +26,7 @@
 	# and Strength II at the corresponding threshold.
 	#
 	#
-	benefitsUnparsed = ["attribute,generic.max_health,2", "attribute,generic.max_health,2", "attribute,generic.max_health,2", "attribute,generic.max_health,2;effect,speed,0", "attribute,generic.max_health,4", "attribute,generic.max_health,4", "attribute,generic.max_health,4;effect,strength,1"]
+	benefitsUnparsed = ["attribute,generic.max_health,2", "attribute,generic.max_health,2", "attribute,generic.max_health,2", "attribute,generic.max_health,2;attribute,generic.movement_speed,0.2", "attribute,generic.max_health,4", "attribute,generic.max_health,4", "attribute,generic.max_health,4;attribute,generic.attack_damage,3"]
 	# The minimum number of foods a player needs to eat before any benefits are applied.
 	#
 	#
