Initial health and food always edible

--- a/.minecraft/config/fabrication/features.ini
+++ b/.minecraft/config/fabrication/features.ini
@@ -724,7 +724,7 @@
 	faster_obsidian=unset
 
 	; Allows players to eat unconditionally.
-	food_always_edible=unset
+	food_always_edible=true
 
 	; Makes furnace minecarts very fast and burn fuel more quickly.
 	; 
@@ -988,4 +988,8 @@
 
 
 ; Notices: (Do not edit anything past this line; it will be overwritten)
-; - No notices. You're in the clear!
+; - tweaks.silent_minecarts was not found
+; - mechanics.bottled_air was not found
+; - woina.no_experience was not found
+; - situational.disable_elytra was not found
+; Consider updating this config file by renaming it to fabrication.ini.old
