--- a/.minecraft/config/oretweaker-common.toml
+++ b/.minecraft/config/oretweaker-common.toml
@@ -1,3 +1,4 @@
 "Disable Ores" = ["minecraft:coal_ore", "minecraft:gold_ore", "minecraft:diamond_ore", "minecraft:lapis_ore", "minecraft:emerald_ore", "minecraft:nether_gold_ore"]
 "Custom Ore" = []
+"Enable Debug Output" = false
 
