--- a/.minecraft/config/fabrication/features.ini
+++ b/.minecraft/config/fabrication/features.ini
@@ -724,7 +724,7 @@
 	faster_obsidian=unset
 
 	; Allows players to eat unconditionally.
-	food_always_edible=true
+	food_always_edible=false
 
 	; Makes furnace minecarts very fast and burn fuel more quickly.
 	; 
