--- a/.minecraft/config/fabrication/features.ini
+++ b/.minecraft/config/fabrication/features.ini
@@ -988,8 +988,13 @@
 
 
 ; Notices: (Do not edit anything past this line; it will be overwritten)
+; - tweaks.alt_absorption_sound was not found
 ; - tweaks.silent_minecarts was not found
 ; - mechanics.bottled_air was not found
+; - balance.loading_furnace_minecart was not found
+; - weird_tweaks.endermen_dont_grief was not found
 ; - woina.no_experience was not found
+; - woina.old_sheep_shear was not found
+; - situational.disable_bees was not found
 ; - situational.disable_elytra was not found
 ; Consider updating this config file by renaming it to fabrication.ini.old
