--- a/.minecraft/config/jei/recipe-category-sort-order.ini
+++ b/.minecraft/config/jei/recipe-category-sort-order.ini
@@ -69,3 +69,4 @@ mekanism:sps_casing
 mekanism:thermal_evaporation_controller
 mekanismgenerators:fission_reactor_casing
 botanypots:soil
+create:wood_cutting
