--- a/.minecraft/config/snowrealmagic-common.toml
+++ b/.minecraft/config/snowrealmagic-common.toml
@@ -1,16 +1,25 @@
 placeSnowInBlock = true
 snowGravity = true
 snowAlwaysReplaceable = true
+#Unavailable if TerraForged mod installed
 snowAccumulationDuringSnowstorm = true
+#Unavailable if TerraForged mod installed
 snowAccumulationDuringSnowfall = false
-snowAccumulationOnSpecialBlocks = true
+#Unavailable if TerraForged mod installed
 thinnerBoundingBox = true
 snowMakingIce = true
 snowOnIce = false
 snowNeverMelt = false
 replaceWorldFeature = true
-#Requires Mixin
 sustainGrassIfLayerMoreThanOne = true
-#If you want to uninstall this mod, you probably want to make snow-covered blocks back to normal.
+#If you want to uninstall this mod, you probably want to make snow-covered blocks back to normal via random tick.
 retainOriginalBlocks = false
+#9 = Unlimited
+#Range: 1 ~ 9
+snowAccumulationMaxLayers = 8
+snowMeltsInWarmBiomes = false
+#Should snow melt if layers are more than 1
+snowNaturalMelt = false
+snowReduceFallDamage = true
+advancedBlockInteraction = true
 
