--- a/.minecraft/config/supplementaries-client.toml
+++ b/.minecraft/config/supplementaries-client.toml
@@ -7,6 +7,16 @@
 	[blocks.globe]
 		#enable a random globe texture for each world
 		random_world = true
+		#here you can put custom colors that will be assigned to each globe depending on its dimension:
+		#to do so you'll have to make a list of lists in the format [[id,colors...],[id,colors...],...]
+		#1: dimension id
+		#now follows 12 numbers that will be used to color all of the 17 possible 'biomes'. omitting even one will make the config invalid
+		#2: water, 3: water shaded, 4: water dark, 5: coast/taiga 
+		#6: forest, 7: plains
+		#8: savanna, 9: desert
+		#10: snow, 11: ice, 12: iceberg/island
+		#13: mushroom island
+		globe_colors = [["minecraft:overworld", "23658d", "25527d", "1d396d", "2d8a5c", "34a03a", "6ea14b", "89a83d", "b5ba65", "ccd7d5", "83b4c6", "2f83a2", "826e71"], ["minecraft:the_nether", "941818", "7b0000", "6a0400", "16615b", "941818", "ca4e06", "e66410", "f48522", "5a0000", "32333d", "118066", "100c1c"], ["minecraft:the_end", "061914", "000000", "2a0d2a", "000000", "d5da94", "cdc68b", "061914", "2a0d2a", "cdc68b", "000000", "eef6b4", "b286b2"]]
 
 	[blocks.clock_block]
 		#display 24h time format. False for 12h format
@@ -66,6 +76,19 @@
 		#Range: 0.0 ~ 10.0
 		amplitude_increment = 0.3
 
+	[blocks.captured_mobs]
+		#following here is a list of mob ids and 4 parameters that determine how they are displayed in jars and cages:
+		#1&2: these are the added height and width that will be added to the mob actual hitbox to determine its scale inside a cage or jar 
+		#you can increase them so this 'adjusted hitbox' will match the actual mob shape, in other words increase the to make the mob smaller
+		#3: this one determines if the mob should emit light
+		#4: the last parameter determines the animation type. It can be set to the following values:
+		#-'air' to make it stand in mid air like a flying animal (note that such mobs are set to this value by default)
+		#-'land' to force it to stand on the ground even if it is a flying animal
+		#-'floating' to to make it stand in mid air and wobble up and down
+		#-any number >0 to make it render as a 2d fish. The ordinal of the texture that will be shown will be the number
+		#-0 or any other values will be ignored and treated as default
+		rendering_parameters = [["minecraft:bee", "0.3125", "0.0"], ["minecraft:vex", "0.0", "0.125", "0", "FLOATING"], ["minecraft:silverfish", "0.0", "0.25"], ["minecraft:chicken", "0.25", "0.3125"], ["minecraft:endermite", "0.0", "0.0", "5"], ["supplementaries:firefly", "0.0", "0.0", "9", "FLOATING"], ["druidcraft:lunar_moth", "0.375", "0.1375", "10", "FLOATING"], ["iceandfire:pixie", "0.0", "0.0", "10"], ["minecraft:fish", "0.0", "0.125", "0", "1"], ["minecraft:tropical_fish", "0.0", "0.125", "0", "2"], ["minecraft:salmon", "0.0", "0.125", "0", "3"], ["minecraft:cod", "0.0", "0.125", "0", "4"], ["minecraft:pufferfish", "0.0", "0.125", "0", "5"], ["minecraft:axolotl", "0.0", "0.125", "0", "6"], ["fins:pea_wee", "0.0", "0.125", "0", "7"], ["fins:wee_wee", "0.0", "0.125", "0", "8"], ["fins:vibra_wee", "0.0", "0.125", "0", "9"], ["fins:blu_wee", "0.0", "0.125", "0", "10"], ["fins:ornate_bugfish", "0.0", "0.125", "0", "11"], ["fins:spindly_gem_crab", "0.0", "0.125", "0", "12"], ["fins:phantom_nudibranch", "0.0", "0.125", "0", "13"], ["fins:high_finned_blue", "0.0", "0.125", "0", "14"], ["fins:teal_arrowfish", "0.0", "0.125", "0", "15"], ["fins:midnight_squid", "0.0", "0.125", "0", "16"], ["fins:banded_redback_shrimp", "0.0", "0.125", "0", "17"], ["fins:flatback_sucker", "0.0", "0.125", "0", "18"], ["fins:swamp_mucker", "0.0", "0.125", "0", "19"], ["upgrade_aquatic:lionfish", "0.0", "0.125", "0", "20"], ["upgrade_aquatic:nautilus", "0.0", "0.125", "0", "21"], ["upgrade_aquatic:pike", "0.0", "0.125", "0", "22"], ["alexsmobs:stradpole", "0.0", "0.125", "0", "23"], ["alexsmobs:blobfish", "0.0", "0.125", "0", "24"], ["unnamedanimalmod:flashlight_fish", "0.0", "0.125", "0", "25"], ["unnamedanimalmod:elephantnose_fish", "0.0", "0.125", "0", "26"], ["unnamedanimalmod:black_diamond_stingray", "0.0", "0.125", "0", "27"], ["unnamedanimalmod:humphead_parrotfish", "0.0", "0.125", "0", "28"], ["unnamedanimalmod:tomato_frog", "0.0", "0.125", "0", "29"], ["unnamedanimalmod:pacman_frog", "0.0", "0.125", "0", "30"], ["bettas:betta_fish", "0.0", "0.125", "0", "31"], ["pogfish:pogfish", "0.0", "0.125", "0", "32"], ["undergarden:gwibling", "0.0", "0.125", "0", "33"], ["environmental:koi", "0.0", "0.125", "0", "34"], ["betterendforge:end_fish", "0.0", "0.125", "0", "35"], ["betteranimalsplus:flying_fish", "0.0", "0.125", "0", "36"], ["betteranimalsplus:nautilus", "0.0", "0.125", "0", "37"], ["betteranimalsplus:eel_freshwater", "0.0", "0.125", "0", "38"], ["betteranimalsplus:eel_saltwater", "0.0", "0.125", "0", "39"], ["betteranimalsplus:lamprey", "0.0", "0.125", "0", "40"], ["betteranimalsplus:piranha", "0.0", "0.125", "0", "41"], ["betteranimalsplus:barracuda", "0.0", "0.125", "0", "42"], ["rediscovered:fish", "0.0", "0.125", "0", "1"]]
+
 #particle parameters
 [particles]
 
@@ -97,6 +120,8 @@
 
 #general settings
 [general]
-	#show some tooltip hints to guide player through the mod
+	#show some tooltip hints to guide players through the mod
 	tooltip_hints = true
+	#tries to detect when the mod hasn't been downloaded from curseforge. set to false if you have manually changed the mod jar name
+	anti_reposting_warning = true
 
