--- a/.minecraft/config/supplementaries-common.toml
+++ b/.minecraft/config/supplementaries-common.toml
@@ -1,8 +1,4 @@
 
-[comment]
-	#This config is synced server side. If you are on a server you'll get its own version
-	comment = true
-
 #Server side blocks configs
 [blocks]
 
@@ -73,7 +69,7 @@
 		cage_mobs = ["minecraft:slime", "minecraft:bee", "minecraft:magma_cube", "iceandfire:pixie", "alexsmobs:fly", "alexsmobs:hummingbird", "alexsmobs:cockroach", "buzzierbees:honey_slime", "mysticalworld:frog", "mysticalworld:beetle", "mysticalworld:silkworm", "druidcraft:lunar_moth", "druidcraft:dreadfish", "swampexpansion:slabfish", "savageandravage:creepie", "betteranimalsplus:butterfly", "whisperwoods:moth", "minecraft:endermite", "minecraft:vex", "alexsmobs:mimicube", "minecraft:parrot", "minecraft:rabbit", "minecraft:cat", "minecraft:chicken", "minecraft:bat", "minecraft:fox", "minecraft:ocelot", "alexsmobs:roadrunner", "alexsmobs:rattlesnake", "alexsmobs:lobster", "alexsmobs:capuchin_monkey", "mysticalworld:silver_fox", "mysticalworld:sprout", "mysticalworld:endermini", "mysticalworld:lava_cat", "mysticalworld:owl", "mysticalworld:hell_sprout", "quark:toretoise", "quark:crab", "quark:foxhound", "quark:stoneling", "quark:frog", "rats:rat", "rats:piper", "rats:plague_doctor", "rats:black_death", "rats:plague_cloud", "rats:plague_beast", "rats:rat_king", "rats:demon_rat", "rats:ratlantean_spirit", "rats:ratlantean_automation", "rats:feral_ratlantean", "rats:neo_ratlantean", "rats:pirat", "rats:ghost_pirat", "rats:dutchrat", "rats:ratfish", "rats:ratlantean_ratbot", "rats:rat_baron", "goblintraders:goblin_trader", "goblintraders:vein_goblin_trader", "autumnity:snail", "betteranimalsplus:lammergeier", "betteranimalsplus:songbird", "betteranimalsplus:pheasant", "betteranimalsplus:squirrel", "betteranimalsplus:badger", "betteranimalsplus:turkey", "exoticbirds:roadrunner", "exoticbirds:hummingbird", "exoticbirds:woodpecker", "exoticbirds:kingfisher", "exoticbirds:toucan", "exoticbirds:macaw", "exoticbirds:magpie", "exoticbirds:kiwi", "exoticbirds:owl", "exoticbirds:gouldianfinch", "exoticbirds:gull", "exoticbirds:pigeon", "exoticbirds:penguin", "exoticbirds:duck", "exoticbirds:booby", "exoticbirds:cardinal", "exoticbirds:bluejay", "exoticbirds:robin", "exoticbirds:kookaburra", "exoticbirds:budgerigar", "exoticbirds:cockatoo", "swampexpansion:slabfish"]
 		#additional mobs that you'll be able to catch with the added condition that it has to be a baby variant. No need to include the ones already in cage_mobs
 		cage_baby_mobs = ["minecraft:cow", "minecraft:sheep", "minecraft:pig", "alexsmobs:crocodile", "alexsmobs:endergrade", "alexsmobs:gazelle", "alexsmobs:gorilla", "alexsmobs:komodo_dragon", "alexsmobs:raccoon", "alexsmobs:seal", "alexsmobs:warped_toad"]
-		#allow all mobs to be captured by cages
+		#allow all entities to be captured by cages and jars. Not meant for survival
 		cage_allow_all_mobs = false
 		#allow all baby mobs to be captured by cages
 		cage_allow_all_babies = false
@@ -83,9 +79,7 @@
 		allow_any_item = false
 
 	[blocks.sack]
-		#additional blocks that can support a sack
-		whitelist = ["farmersdelight:rope"]
-		#penalize the player with slowness effecn when carring too many sacks
+		#penalize the player with slowness effect when carrying too many sacks
 		sack_penality = true
 		#maximum number of sacks after which the slowness effect will be applied. each multiple of this number will further slow the player down
 		#Range: 0 ~ 50
@@ -120,6 +114,13 @@
 		#Range: 0 ~ 64
 		max = 9
 
+	[spawns.structures]
+		#enable experimental road sign structures. This will likely change in the nar future
+		experimental_road_signs = true
+		#the higher this number is the less sign posts you'll find
+		#Range: 1 ~ 2000
+		rarity = 80
+
 #entities parameters
 [entities]
 
@@ -150,7 +151,7 @@
 		enabled = true
 
 	[tweaks.throwable_bricks]
-		#throw bricks at your foes! Might glass blocks
+		#throw bricks at your foes! Might break glass blocks
 		enabled = true
 
 	[tweaks.wall_lantern]
@@ -177,4 +178,8 @@
 		bound_distance = 64
 		#additional non tameable entities that you can bind to flutes
 		flute_extra_mobs = ["minecraft:horse", "minecraft:llama", "minecraft:donkey", "minecraft:fox"]
+
+	[items.rope_arrow]
+		#If you really don't like my ropes you can specify here the block id ofa rope from another mod which will get deployed by rope arrows instead of mine
+		rope_arrow_override = "supplementaries:rope"
 
