--- a/.minecraft/config/jei/ingredient-list-mod-sort-order.ini
+++ b/.minecraft/config/jei/ingredient-list-mod-sort-order.ini
@@ -22,6 +22,7 @@ Storage Drawers
 Supplementaries
 Wandering Trader Improvements
 BotanyPots
-Azuredooms Chunk Loader Mod
 The Endergetic Expansion
 Snow! Real Magic!
+Storage for ComputerCraft
+Chunk Loaders
