--- a/.minecraft/config/jei/recipe-category-sort-order.ini
+++ b/.minecraft/config/jei/recipe-category-sort-order.ini
@@ -70,3 +70,4 @@ mekanism:thermal_evaporation_controller
 mekanismgenerators:fission_reactor_casing
 botanypots:soil
 create:wood_cutting
+jepb:bartering
