--- a/.minecraft/config/supplementaries-common.toml
+++ b/.minecraft/config/supplementaries-common.toml
@@ -3,16 +3,16 @@
 [blocks]
 
 	[blocks.globe]
-		#how many globe trades to give to the wandering trader. If you have mods that add more trades to him you might want to increase this so it's not as rare
-		#Range: 0 ~ 50
-		trades = 2
 		#chanche of finding a globe in a shipwreck treasure chest.
 		#Range: 0.0 ~ 1.0
 		shipwreck_treasure_chance = 0.25
+		#how many globe trades to give to the wandering trader. This will effectively increase the chance of him having a globe trader. Increase this if you have other mods that add stuff to that trader
+		#Range: 0 ~ 50
+		chance = 2
 
 	[blocks.speaker_block]
 		#maximum range
-		#Range: 0 ~ 256
+		#Range: 0 ~ 10000000
 		range = 64
 
 	[blocks.bellows]
@@ -57,18 +57,8 @@
 		#allow right click to instantly eat or drink food or potions inside a jar.
 		#Disable if you think this ability is op. Cookies are excluded
 		drink_from_jar = true
-		#catchable mobs 
-		#due to a vanilla bug some mobs might not render correctly or at all
-		mobs = ["minecraft:slime", "minecraft:bee", "minecraft:magma_cube", "iceandfire:pixie", "alexsmobs:fly", "alexsmobs:hummingbird", "alexsmobs:cockroach", "buzzierbees:honey_slime", "mysticalworld:frog", "mysticalworld:beetle", "mysticalworld:silkworm", "druidcraft:lunar_moth", "druidcraft:dreadfish", "swampexpansion:slabfish", "savageandravage:creepie", "betteranimalsplus:butterfly", "whisperwoods:moth"]
-		#tinted jar catchable mobs
-		tinted_jar_mobs = ["minecraft:slime", "minecraft:bee", "minecraft:magma_cube", "iceandfire:pixie", "alexsmobs:fly", "alexsmobs:hummingbird", "alexsmobs:cockroach", "buzzierbees:honey_slime", "mysticalworld:frog", "mysticalworld:beetle", "mysticalworld:silkworm", "druidcraft:lunar_moth", "druidcraft:dreadfish", "swampexpansion:slabfish", "savageandravage:creepie", "betteranimalsplus:butterfly", "whisperwoods:moth", "minecraft:endermite", "minecraft:vex", "alexsmobs:mimicube"]
 
-	#I haven't tested most of the mods included here. let me know if they work
 	[blocks.cage]
-		#catchable mobs
-		cage_mobs = ["minecraft:slime", "minecraft:bee", "minecraft:magma_cube", "iceandfire:pixie", "alexsmobs:fly", "alexsmobs:hummingbird", "alexsmobs:cockroach", "buzzierbees:honey_slime", "mysticalworld:frog", "mysticalworld:beetle", "mysticalworld:silkworm", "druidcraft:lunar_moth", "druidcraft:dreadfish", "swampexpansion:slabfish", "savageandravage:creepie", "betteranimalsplus:butterfly", "whisperwoods:moth", "minecraft:endermite", "minecraft:vex", "alexsmobs:mimicube", "minecraft:parrot", "minecraft:rabbit", "minecraft:cat", "minecraft:chicken", "minecraft:bat", "minecraft:fox", "minecraft:ocelot", "alexsmobs:roadrunner", "alexsmobs:rattlesnake", "alexsmobs:lobster", "alexsmobs:capuchin_monkey", "mysticalworld:silver_fox", "mysticalworld:sprout", "mysticalworld:endermini", "mysticalworld:lava_cat", "mysticalworld:owl", "mysticalworld:hell_sprout", "quark:toretoise", "quark:crab", "quark:foxhound", "quark:stoneling", "quark:frog", "rats:rat", "rats:piper", "rats:plague_doctor", "rats:black_death", "rats:plague_cloud", "rats:plague_beast", "rats:rat_king", "rats:demon_rat", "rats:ratlantean_spirit", "rats:ratlantean_automation", "rats:feral_ratlantean", "rats:neo_ratlantean", "rats:pirat", "rats:ghost_pirat", "rats:dutchrat", "rats:ratfish", "rats:ratlantean_ratbot", "rats:rat_baron", "goblintraders:goblin_trader", "goblintraders:vein_goblin_trader", "autumnity:snail", "betteranimalsplus:lammergeier", "betteranimalsplus:songbird", "betteranimalsplus:pheasant", "betteranimalsplus:squirrel", "betteranimalsplus:badger", "betteranimalsplus:turkey", "exoticbirds:roadrunner", "exoticbirds:hummingbird", "exoticbirds:woodpecker", "exoticbirds:kingfisher", "exoticbirds:toucan", "exoticbirds:macaw", "exoticbirds:magpie", "exoticbirds:kiwi", "exoticbirds:owl", "exoticbirds:gouldianfinch", "exoticbirds:gull", "exoticbirds:pigeon", "exoticbirds:penguin", "exoticbirds:duck", "exoticbirds:booby", "exoticbirds:cardinal", "exoticbirds:bluejay", "exoticbirds:robin", "exoticbirds:kookaburra", "exoticbirds:budgerigar", "exoticbirds:cockatoo", "swampexpansion:slabfish"]
-		#additional mobs that you'll be able to catch with the added condition that it has to be a baby variant. No need to include the ones already in cage_mobs
-		cage_baby_mobs = ["minecraft:cow", "minecraft:sheep", "minecraft:pig", "alexsmobs:crocodile", "alexsmobs:endergrade", "alexsmobs:gazelle", "alexsmobs:gorilla", "alexsmobs:komodo_dragon", "alexsmobs:raccoon", "alexsmobs:seal", "alexsmobs:warped_toad"]
 		#allow all entities to be captured by cages and jars. Not meant for survival
 		cage_allow_all_mobs = false
 		#allow all baby mobs to be captured by cages
@@ -79,21 +69,67 @@
 		allow_any_item = false
 
 	[blocks.sack]
-		#penalize the player with slowness effect when carrying too many sacks
+		#Penalize the player with slowness effect when carrying too many sacks
 		sack_penality = true
 		#maximum number of sacks after which the slowness effect will be applied. each multiple of this number will further slow the player down
 		#Range: 0 ~ 50
 		sack_increment = 2
-		#additional sack slots divided by 2. Number of slots will be 5 + additional_slots*2
-		#Range: 0 ~ 2
-		additional_slots = 0
+		#How many slots should a sack have
+		#Range: 1 ~ 27
+		slots = 9
 
 	[blocks.safe]
-		#makes safes only breakable by their owner or by a player in creative
+		#Makes safes only breakable by their owner or by a player in creative
 		prevent_breaking = false
-		#make safes simpler so they do not require keys:
+		#Make safes simpler so they do not require keys:
 		#they will be bound to the first person that opens one and only that person will be able to interact with them
 		simple_safes = false
+
+	[blocks.blackboard]
+		#Enable to draw directly on a blackboard using any dye. Gui still only works in black and white
+		colored_blackboard = false
+
+	[blocks.candle_holder]
+		#Candle holder light level
+		#Range: 1 ~ 15
+		light_level = 12
+
+	[blocks.hourglass]
+		#Time in ticks for sugar
+		#Range: 0 ~ 10000
+		sugar_time = 40
+		#Time in ticks for sand blocks
+		#Range: 0 ~ 10000
+		sand_time = 70
+		#Time in ticks for concrete blocks
+		#Range: 0 ~ 10000
+		concrete_time = 105
+		#Time in ticks for generic dust
+		#Range: 0 ~ 10000
+		dust_time = 150
+		#Time in ticks for glowstone dust
+		#Range: 0 ~ 10000
+		glowstone_time = 190
+		#Time in ticks for blaze powder
+		#Range: 0 ~ 10000
+		blaze_powder_time = 277
+		#Time in ticks for redstone dust
+		#Range: 0 ~ 10000
+		redstone_time = 400
+		#Time in ticks for slime balls
+		#Range: 0 ~ 10000
+		slime_time = 1750
+		#Time in ticks for honey
+		#Range: 0 ~ 10000
+		honey_time = 2000
+
+	[blocks.item_shelf]
+		#Makes item shelves climbable
+		climbable_shelves = false
+
+	[blocks.iron_gate]
+		#Allows two iron gates to be opened simultaneously when on top of the other
+		double_opening = true
 
 #Configure spawning conditions
 [spawns]
@@ -115,11 +151,18 @@
 		max = 9
 
 	[spawns.structures]
-		#enable experimental road sign structures. This will likely change in the nar future
-		experimental_road_signs = true
-		#the higher this number is the less sign posts you'll find
-		#Range: 1 ~ 2000
-		rarity = 80
+
+		[spawns.structures.way_sign]
+			#Average distance apart in chunks between spawn attempts
+			#Range: 0 ~ 1001
+			average_distance = 19
+			#Minimum distance apart in chunks between spawn attempts. 1001 to disable them entirely
+			#Range: 0 ~ 1001
+			minimum_distance = 10
+			#With this option road signs will display the distance to the structure that they are pointing to
+			show_distance_text = true
+			#list of structure that a sign can point to. Note that they will only spawn in dimensions where vanilla villages can
+			villages = ["minecraft:village", "repurposed_structures:village_badlands", "repurposed_structures:village_dark_oak", "repurposed_structures:village_birch", "repurposed_structures:village_giant_taiga", "repurposed_structures:village_jungle", "repurposed_structures:village_mountains", "repurposed_structures:village_oak", "repurposed_structures:village_swamp", "pokecube:village", "pokecube_legends:village", "pokecube_legends:village/ocean", "valhelsia_structures:castle", "valhelsia_structures:castle_ruin", "valhelsia_structures:small_castle", "valhelsia_structures:tower_ruin", "stoneholm:underground_village"]
 
 #entities parameters
 [entities]
@@ -167,6 +210,50 @@
 		#Range: 0 ~ 1024
 		chain_length = 16
 
+	[tweaks.raked_gravel]
+		#allow gravel to be raked with a hoe
+		enabled = true
+
+	[tweaks.bottle_xp]
+		#Allow bottling up xp by using a bottle on an enchanting table
+		enabled = true
+		#bottling health cost
+		#Range: 0 ~ 20
+		cost = 2
+
+	[tweaks.map_tweaks]
+		#In this section you can add custom structure maps to cartographers
+		#The format required is as follows:
+		#[[<structure>,<level>,<min_price>,<max_price>,<map_name>,<map_color>,<map_marker>],[<structure>,...,<map_marker>],...]
+		#With the following parameters:
+		# - <structure> structure id to be located (ie: minecraft:igloo)
+		# - <level> villager trading level at which the map will be sold. Must be between 1 and 5
+		# - <min_price> minimum emerald price
+		# - <max_price> maximum emerald price
+		# - <map_name> map item name
+		# - <map_color> hex color of the map item overlay texture
+		# - <map_marker> id of the map marker to be used (ie: supplementaries:igloo). 
+		#See texture folder for all the names. Leave empty for default ones
+		#Note that ony the first parameter is required, each of the others others can me removed and will be defaulted to reasonable values
+		#example: ['minecraft:swamp_hut','2','5','7','witch hut map','0x00ff33']
+		custom_adventurer_maps = [[""]]
+		#Cartographers will sell 'adventurer maps' that will lead to a random vanilla structure (choosen from a thought out preset list).
+		#Best kept disabled if you are adding custom adventurer maps with its config
+		random_adventurer_maps = true
+		#enables beacons, lodestones, respawn anchors, beds, conduits, portals to be displayed on maps by clicking one of them with a map
+		block_map_markers = true
+
+	[tweaks.ceiling_banners]
+		#Allow banners to be placed on ceilings
+		enabled = true
+
+	[tweaks.zombie_horse]
+		#Feed a stack of rotten flesh to a skeleton horse to buff him up to a zombie horse
+		zombie_horse_conversion = true
+		#Amount of rotten flesh needed
+		#Range: 1 ~ 1000
+		rotten_flesh = 64
+
 [items]
 
 	[items.flute]
@@ -176,10 +263,15 @@
 		#max distance at which a bound flute will allow a pet to teleport
 		#Range: 0 ~ 500
 		bound_distance = 64
-		#additional non tameable entities that you can bind to flutes
-		flute_extra_mobs = ["minecraft:horse", "minecraft:llama", "minecraft:donkey", "minecraft:fox"]
 
 	[items.rope_arrow]
 		#If you really don't like my ropes you can specify here the block id ofa rope from another mod which will get deployed by rope arrows instead of mine
 		rope_arrow_override = "supplementaries:rope"
+
+	[items.bomb]
+		#Bomb explosion radius (damage depends on this)
+		#Range: 0.1 ~ 10.0
+		explosion_radius = 2.0
+		#Do bombs break blocks like tnt?
+		break_blocks = false
 
